<?xml version="1.0" encoding="utf-8"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>py_trees_ros_interfaces</name>
  <version>2.1.0</version>
  <description>
    Interfaces used by py_trees_ros and py_trees_ros_tutorials.
  </description>

  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/py_trees_ros_interfaces</url>
  <url type="repository">https://github.com/splintered-reality/py_trees_ros_interfaces</url>
  <url type="bugtracker">https://github.com/splintered-reality/py_trees_ros_interfaces/issues</url>

  <author>Daniel Stonier</author>
  <author>Michal Staniaszek</author>
  <author>Naveed Usmani</author>

  <!-- catkin to ament in ROS2 -->
  <!-- <buildtool_depend>ament_cmake</buildtool_depend> -->
  <buildtool_depend>catkin</buildtool_depend>


  <!--ROS2 -->
  <!--
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <test_depend>ament_lint_common</test_depend>
  -->
  <!-- rosidl_cmake requires any message package be part of this group -->
  <!--
  <member_of_group>rosidl_interface_packages</member_of_group>
  -->

  <depend>diagnostic_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- actionlib_msgs changed to action_msgs in ROS2 -->
  <!-- <depend>action_msgs</depend> -->
  <depend>actionlib_msgs</depend>

  <!-- uuid_msgs changed to unique_identifier_msgs in ROS2 -->
  <!-- <depend>unique_identifier_msgs</depend> -->
  <depend>uuid_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>


  <export>
  <!--
    <build_type>ament_cmake</build_type>
  -->
  </export>
</package>
